WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35952
[chromium] Mouse wheel events don't get propagated to plugins
https://bugs.webkit.org/show_bug.cgi?id=35952
Summary
[chromium] Mouse wheel events don't get propagated to plugins
John Abd-El-Malek
Reported
2010-03-09 18:12:23 PST
WebPluginContainerImpl::handleEvent only handles keyboard and mouse events. We'll need to pass in mouse wheel events as well for Pepper.
Attachments
Proposed patch
(6.94 KB, patch)
2010-03-10 00:46 PST
,
John Abd-El-Malek
no flags
Details
Formatted Diff
Diff
Updated patch
(6.96 KB, patch)
2010-03-10 01:18 PST
,
John Abd-El-Malek
fishd
: review+
fishd
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Abd-El-Malek
Comment 1
2010-03-10 00:46:44 PST
Created
attachment 50378
[details]
Proposed patch
WebKit Review Bot
Comment 2
2010-03-10 00:48:35 PST
Attachment 50378
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/chromium/src/WebPluginContainerImpl.cpp:386: cursor_info is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
John Abd-El-Malek
Comment 3
2010-03-10 01:18:49 PST
Created
attachment 50380
[details]
Updated patch
Darin Fisher (:fishd, Google)
Comment 4
2010-03-10 10:48:10 PST
Comment on
attachment 50380
[details]
Updated patch
> Index: WebKit/chromium/src/WebInputEventConversion.cpp
> +WebMouseWheelEventBuilder::WebMouseWheelEventBuilder(const WebCore::ScrollView* view, const WebCore::WheelEvent& event)
...
> + scrollByPage = event.granularity() == WebCore::WheelEvent::Page;
^^^ no need for WebCore:: prefix since there is a 'using namespace WebCore' up above.
John Abd-El-Malek
Comment 5
2010-03-10 14:03:15 PST
Committed
r55805
: <
http://trac.webkit.org/changeset/55805
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug