2010-03-10  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=35952
        Propagate mouse wheel events to Pepper plugins.

        * src/WebInputEventConversion.cpp:
        (WebKit::WebMouseWheelEventBuilder::WebMouseWheelEventBuilder):
        * src/WebInputEventConversion.h:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::handleEvent):
        (WebKit::WebPluginContainerImpl::handleMouseEvent):
        (WebKit::WebPluginContainerImpl::handleWheelEvent):
        (WebKit::WebPluginContainerImpl::handleKeyboardEvent):
        * src/WebPluginContainerImpl.h:


Canonical link: https://commits.webkit.org/47100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55805 268f45cc-cd09-0410-ab3c-d52691b4dbfc