WebKit/chromium/src/WebPluginContainerImpl.h
@@ -48,6 +48,7 @@ class KeyboardEvent;
 class MouseEvent;
 class ResourceError;
 class ResourceResponse;
+class WheelEvent;
 }
 
 namespace WebKit {
@@ -104,6 +105,7 @@ private:
     ~WebPluginContainerImpl();
 
     void handleMouseEvent(WebCore::MouseEvent*);
+    void handleWheelEvent(WebCore::WheelEvent*);
     void handleKeyboardEvent(WebCore::KeyboardEvent*);
 
     void calculateGeometry(const WebCore::IntRect& frameRect,
